# collab-3d-printing-sim

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
ws/src/multi_arm_sim/: CMakeLists.txt  package.xml
ws/src/multi_arm_sim/config/: xarm_lite.srdf
ws/src/multi_arm_sim/launch/: simulation.launch.py
ws/src/multi_arm_sim/urdf/: xarm_lite.urdf
ws/src/multi_arm_sim/worlds/: print_world.sdf
