cmake_minimum_required(VERSION 3.8)
project(multi_arm_sim)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(gazebo_ros REQUIRED)
find_package(moveit REQUIRED)

install(DIRECTORY launch urdf worlds config
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
