<?xml version="1.0"?>
<package format="3">
  <name>multi_arm_sim</name>
  <version>0.1.0</version>
  <description>ROS 2 package for multi-arm 3D printing simulation</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <depend>ros2</depend>
  <depend>gazebo_ros</depend>
  <depend>moveit</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
